Fix slider input display on mobile.

--- a/site/src/styles/layout.scss
+++ b/site/src/styles/layout.scss
@@ -6,3 +6,8 @@
   display:inline-block;
 }
 
+[data-rel=dialog] .ui-slider-input {
+  font-weight: bold;
+  width: 23px;
+}
+
